# FileMason

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
app/: config_loader.py  exceptions.py
models/: ActionPlan.py  ActionStep.py  FileItem.py
services/: Reader.py  classifier.py
src/filemason/: Config_Loader.py  Exceptions.py  cli.py  config_loader.py  orchestrator.py
src/filemason/models/: ActionPlan.py  FileItem.py  action_plan.py  action_step.py  file_item.py  run_result.py
src/filemason/services/: Classifier.py  Reader.py  classifier.py  executor.py  planner.py
tests/: conftest.py  test_classifier.py  test_cli.py  test_config_loader.py  test_executor.py  test_orchestrator.py  test_planner.py  test_reader.py
