[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "filemason"
version = "0.1.0"
description = "a file organizing cli tool"
authors = [{name = "Karson Bryant"}]
readme = "README.md"
dependencies = []
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8.0.0",
    "pytest-cov>=4.1",
    "black>=24.0.0",
    "ruff>=0.5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/KarBryant/FileMason"
Source = "https://github.com/KarBryant/FileMason"
Issues = "https://github.com/KarBryant/FileMason/issues"